Update testing workflow to use parallel sharded structure (#754)